# obs-spectrogram

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
data/shaders/: spectrogram.effect
src/: fft.c  fft.h  plugin-main.c  spectrogram-source.c  spectrogram-source.h
